--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2013 The CyanogenMod Project
+     Copyright (C) 2013 Whisper Systems
+     Copyright (C) 2014 The CyanogenMod Project
 
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
@@ -42,7 +43,7 @@
     <string name="ConversationItem_error_sending_message">Error al enviar el mensaje</string>
     <string name="ConversationItem_sending">Enviando\u2026</string>
     <string name="ConversationItem_saving_attachment">Guardando el archivo adjunto</string>
-    <string name="ConversationItem_saving_attachment_to_sd_card">Guardando el archivo adjunto en la tarjeta SD</string>
+    <string name="ConversationItem_saving_attachment_to_sd_card">Guardando el archivo adjunto en la tarjeta SD\u2026</string>
     <string name="ConversationItem_save_to_sd_card">¿Guardar en la tarjeta SD?</string>
     <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_warning">Este archivo ha sido guardado en una base de datos cifrada. La versión que guardarás en la tarjeta SD ya no estará cifrada. ¿Deseas continuar?</string>
     <string name="ConversationItem_error_while_saving_attachment_to_sd_card">Error al guardar el archivo adjunto en la tarjeta SD</string>
@@ -252,7 +253,7 @@
     <string name="conversation_fragment_cab__batch_selection_mode">Modo de selección múltiple</string>
     <string name="country_selection_fragment__loading_countries">Cargando países\u2026</string>
     <string name="country_selection_fragment__search">Buscar</string>
-    <string name="create_passphrase_activity__please_choose_a_passphrase_that_will_be_used_to_locally_encrypt_your_data_this_should_be_a_strong_passphrase">Por favor, escoge una contraseña que se usará de forma local para cifrar tus datos. Debes elegir una contraseña fuerte.</string>
+    <string name="create_passphrase_activity__please_choose_a_passphrase_that_will_be_used_to_locally_encrypt_your_data_this_should_be_a_strong_passphrase">Por favor, escoge una contraseña que se usará de forma local para cifrar tus datos.\n\nDebes elegir una contraseña fuerte.</string>
     <string name="create_passphrase_activity__passphrase">Contraseña:</string>
     <string name="create_passphrase_activity__repeat">Repetir:</string>
     <string name="create_passphrase_activity__continue">Continuar</string>
@@ -267,13 +268,13 @@
     <string name="export_fragment__export_encrypted_backup">Exportar copia de seguridad cifrada</string>
     <string name="export_fragment__export_an_encrypted_backup_to_the_sd_card">Exportar copia de seguridad cifrada a la tarjeta SD.</string>
     <string name="export_fragment__export_plaintext_backup">Exportar copia de seguridad de mensajes en claro</string>
-    <string name="export_fragment__export_a_plaintext_backup_compatible_with">Exportar una copia de seguridad de los mensajes en claro compatible con \u00ABSMS Backup &amp; Restore\u00BB a la tarjeta SD.</string>
+    <string name="export_fragment__export_a_plaintext_backup_compatible_with">Exportar una copia de seguridad de los mensajes en claro compatible con \u00ABSMS Backup And Restore\u00BB a la tarjeta SD.</string>
     <string name="import_fragment__import_system_sms_database">Importar base de datos SMS del sistema</string>
     <string name="import_fragment__import_the_database_from_the_default_system">Importar la base de datos desde la aplicación de mensajería del sistema por defecto.</string>
     <string name="import_fragment__import_encrypted_backup">Importar copia de seguridad cifrada</string>
     <string name="import_fragment__restore_a_previously_exported_encrypted_textsecure_backup">Restaurar una copia de seguridad cifrada previamente exportada desde TextSecure.</string>
     <string name="import_fragment__import_plaintext_backup">Importar copia de seguridad de mensajes en claro</string>
-    <string name="import_fragment__import_a_plaintext_backup_file">Importar una copia de seguridad de mensajes en claro compatible con \u00ABSMS Backup &amp; Restore.\u00BB</string>
+    <string name="import_fragment__import_a_plaintext_backup_file">Importar una copia de seguridad de mensajes en claro compatible con \u00ABSMS Backup And Restore.\u00BB</string>
     <string name="local_identity__regenerate_key">Regenerar clave</string>
     <string name="mms_preferences_activity__manual_mms_settings_are_required">Se requiere el ajuste manual de MMS para este terminal.</string>
     <string name="prompt_passphrase_activity__textsecure_passphrase">CONTRASEÑA TEXTSECURE</string>
